--- a/16/Dockerfile
+++ b/16/Dockerfile
@@ -1,7 +1,6 @@
 FROM         node:16-bullseye-slim
 
-LABEL       author="Server Argentina Tech" maintainer="danelsonic123@serverargentina.com"
-
+LABEL       author="RIFQII STORE" maintainer="rifqiistore87@gmail.com"
 RUN         apt update \
             && apt -y install ffmpeg iproute2 git sqlite3 libsqlite3-dev python3 python3-dev ca-certificates dnsutils tzdata zip tar curl build-essential libtool iputils-ping \
             && useradd -m -d /home/container container
